# C-interpreter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  code.sh  main.cpp  test.txt
.cache/clangd/index/: any.hpp.EF9D3BA551E15F1F.idx  driver.cpp.8CB327AC0B4BB839.idx  driver.hpp.D569DABD528E52AF.idx  function.cpp.0766911FEEBE59C3.idx  function.cpp.BDBEEF86B8A747C1.idx  function.hpp.274DE6C800C12BC8.idx  function.hpp.FF23DF6BC743A324.idx  function_signature.cpp.18E680E4D7E92684.idx  function_signature.hpp.AA14451AC40A865D.idx  init.cpp.582778C702A378B6.idx  instruction.hpp.C20461BC475D8F8B.idx  instruction_flow.hpp.D6D7E71F187FD08B.idx  lexer.cpp.33A46F7523339E50.idx  lexer.cpp.41709B31093DABBE.idx  location.hpp.995D0E850DC60329.idx  main.cpp.724D623B2F7FC8CD.idx  name.cpp.462C0DADC0CAFC52.idx  name.hpp.8AAF87037C56DF30.idx  parser.cpp.8A50CC89D171B2CB.idx  parser.cpp.C6368A43DE46CFC5.idx  parser.hpp.498D83DF22315116.idx  parser.hpp.EF78D92909F79D42.idx  scope.cpp.28AFD4EA1EC68DDD.idx  scope.hpp.4B568C718D174D28.idx  symbol_table.cpp.C84C450E6EC18AB6.idx  symbol_table.hpp.E8212FC44268565F.idx  syntax_tree.cpp.0C233DD1DC244A83.idx  syntax_tree.cpp.A2EC4412E87E1AD6.idx  syntax_tree.hpp.39F92C1A9176D1D0.idx  syntax_tree.hpp.8F291C43F404AE99.idx  type.cpp.99EAA355C7E5EAA4.idx  type.cpp.D7046D917BC37157.idx  type.hpp.6C45FC63CB9DA13E.idx  type.hpp.6EA5BB40B0E512CC.idx  type_set.cpp.9C31DE73F8444A9B.idx  type_set.hpp.22B5AF427F10C158.idx  value.cpp.A6B4601BF6E50EC9.idx  value.hpp.1096DBE4C8DCCB74.idx  value.hpp.58CD4524EA5856C4.idx  variable.cpp.41B8E19CC4149478.idx  (+3 more)
any/: any.hpp
backend/: CMakeLists.txt  virtual_machine.cpp  virtual_machine.hpp
frontend/: CMakeLists.txt  lexer.cpp  lexer.ll  parser.cpp  parser.hpp  parser.yy
function/: CMakeLists.txt  function.cpp
include/: driver.hpp  function.hpp  location.hh  name.hpp  parser.hpp  scope.hpp  syntax_tree.hpp  type.hpp  value.hpp  variable.hpp
init/: CMakeLists.txt  init.cpp
ir/: CMakeLists.txt  function.cpp  function.hpp  function_signature.cpp  function_signature.hpp  instruction.hpp  instruction_flow.hpp  syntax_tree.cpp  syntax_tree.hpp  type.cpp  type.hpp  value.hpp
parser/: CMakeLists.txt  lexer.ll  parser.yy
parser_cpp/: CMakeLists.txt  driver.cpp  lexer.cpp  parser.cpp
symbol_table/: CMakeLists.txt  symbol_table.cpp  symbol_table.hpp
syntax_tree/: CMakeLists.txt  syntax_tree.cpp
utils/: CMakeLists.txt  name.cpp  scope.cpp
value/: CMakeLists.txt  type.cpp  value.cpp  variable.cpp
